--- a/app/src/main/res/layout/activity_splash_screen.xml
+++ b/app/src/main/res/layout/activity_splash_screen.xml
@@ -20,10 +20,11 @@
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toTopOf="parent"
-      android:layout_marginTop="130dp" />
+      android:layout_marginTop="200dp" />
 
   <ImageView
       android:id="@+id/logo"
+      android:contentDescription="@string/app_name"
       android:layout_width="wrap_content"
       android:layout_height="200dp"
       android:src="@drawable/wheelify_logo"
