--- a/app/src/main/res/layout/fragment_scan.xml
+++ b/app/src/main/res/layout/fragment_scan.xml
@@ -17,11 +17,12 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <ImageView
+        android:contentDescription="Preview View"
         android:id="@+id/previewImageView"
         android:layout_width="match_parent"
         android:layout_height="450dp"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="?actionBarSize"
         android:layout_marginEnd="16dp"
         android:layout_marginBottom="35dp"
         android:background="@color/white"
@@ -56,6 +57,8 @@
         android:layout_marginTop="20dp"
         android:layout_marginBottom="20dp"
         android:text="@string/gallery"
+        android:textSize="16sp"
+        android:fontFamily="@font/poppins_bold"
         android:background="@drawable/rounded_button"
         app:backgroundTint="@color/purple_secondary"
         app:layout_constraintBottom_toTopOf="@id/analyzeButton"
@@ -70,6 +73,8 @@
         android:layout_marginTop="20dp"
         android:background="@drawable/rounded_button"
         android:text="@string/analyze"
+        android:textSize="16sp"
+        android:fontFamily="@font/poppins_bold"
         app:backgroundTint="@color/purple_secondary"
         app:layout_constraintTop_toBottomOf="@id/galleryButton"
         app:layout_constraintEnd_toEndOf="parent"
