--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,16 +1,15 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Theme.Wheelify" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
-        <!-- Primary brand color. -->
-        <item name="colorPrimary">@color/purple_secondary</item>
-        <item name="colorPrimaryVariant">@color/purple_primary</item>
-        <item name="colorOnPrimary">@color/white</item>
-        <!-- Secondary brand color. -->
-        <item name="colorSecondary">@color/teal_200</item>
-        <item name="colorSecondaryVariant">@color/teal_700</item>
-        <item name="colorOnSecondary">@color/black</item>
-        <!-- Status bar color. -->
-        <item name="android:statusBarColor">?attr/colorPrimaryVariant</item>
-        <!-- Customize your theme here. -->
-    </style>
-</resources>
+        <style name="Theme.Wheelify" parent="Theme.Material3.DayNight">
+            <!-- Primary colors -->
+            <item name="colorPrimary">@color/purple_primary</item>
+            <item name="colorPrimaryContainer">@color/purple_primary</item>
+            <item name="colorOnPrimary">@color/white</item>
+            <!-- Secondary colors -->
+            <item name="colorSecondary">@color/purple_secondary</item>
+            <item name="colorSecondaryContainer">@color/purple_primary</item>
+            <item name="colorOnSecondary">@color/white</item>
+            <!-- Status bar -->
+            <item name="android:statusBarColor">?attr/colorPrimaryContainer</item>
+        </style>
+    </resources>
