--- a/app/src/main/res/layout/item_banner.xml
+++ b/app/src/main/res/layout/item_banner.xml
@@ -12,10 +12,11 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        android:padding="8dp">
-
+        android:background="?attr/colorSecondary"
+        android:padding="4dp">
 
         <ImageView
+            android:layout_margin="10dp"
             android:id="@+id/img_item_photo"
             android:layout_width="match_parent"
             android:layout_height="200dp"
@@ -27,10 +28,12 @@
             android:id="@+id/tv_item_name"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
+            android:layout_marginTop="10dp"
             android:textAlignment="center"
+            android:textColor="@color/white"
+            android:layout_marginBottom="10dp"
             android:textSize="16sp"
-            android:textColor="@android:color/black"
+            android:textStyle="bold"
             tools:text="Sample Item Name" />
 
     </LinearLayout>
