Memperbaiki Logika untuk Detail Activity

--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -70,13 +70,14 @@
             tools:text="ini deskripsi"/>
 
         <Button
-            android:id="@+id/btn_register"
+            android:id="@+id/btn_source"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
             android:layout_marginTop="16dp"
             android:layout_marginEnd="16dp"
             android:layout_marginBottom="16dp"
+            android:text="@string/source_news"
             tools:text="ini url"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
