--- a/app/src/main/res/layout/item_list.xml
+++ b/app/src/main/res/layout/item_list.xml
@@ -6,9 +6,9 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_gravity="center"
-    android:layout_marginStart="8dp"
+    android:layout_marginStart="12dp"
     android:layout_marginTop="4dp"
-    android:layout_marginEnd="8dp"
+    android:layout_marginEnd="12dp"
     android:layout_marginBottom="4dp"
     card_view:cardCornerRadius="4dp">
 
@@ -17,6 +17,7 @@
         android:layout_height="wrap_content"
         android:orientation="vertical"
         android:padding="8dp"
+        android:background="?attr/colorSecondary"
         card_view:layout_constraintBottom_toBottomOf="parent"
         card_view:layout_constraintTop_toTopOf="parent"
         card_view:layout_constraintVertical_bias="0.0"
@@ -24,7 +25,7 @@
 
         <ImageView
             android:id="@+id/img_item_photo"
-            android:layout_width="150dp"
+            android:layout_width="300dp"
             android:layout_height="200dp"
             android:layout_gravity="center"
             android:scaleType="centerCrop"
@@ -36,10 +37,12 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="15dp"
             android:layout_marginEnd="8dp"
+            android:layout_marginTop="10dp"
             android:textAlignment="center"
             android:textSize="16sp"
             android:textStyle="bold"
-            tools:text="@string/title_headline" />
+            android:textColor="@color/white"
+            android:text="@string/title_headline" />
 
 
     </LinearLayout>
