--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -15,9 +15,10 @@
         app:layout_constraintTop_toTopOf="parent"
         android:textSize="20sp"
         android:gravity="center"
+        android:textAlignment="center"
+        android:fontFamily="@font/poppins_bold"
         android:textStyle="bold"
-        android:layout_marginTop="14dp"
-        android:layout_marginBottom="10dp"
+        android:layout_marginTop="20dp"
         android:textColor="@color/white"
         android:text="@string/recommendation" />
 
@@ -37,6 +38,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
         android:layout_marginStart="18dp"
+        android:fontFamily="@font/poppins_bold"
         android:text="@string/popular"
         android:textColor="@color/white"
         android:textSize="16sp"
@@ -49,7 +51,6 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:paddingVertical="8dp"
-        android:layout_marginTop="5dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tv_popular" />
