--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,7 +8,7 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
 
-    <color name="purple_primary">#C7B4E1</color>
+    <color name="purple_primary">#5B3D7A</color>
     <color name="purple_secondary">#9E65EC</color>
 
     <color name="gray900">#121212</color>
