--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -14,6 +14,7 @@
         tools:ignore="ScrollViewSize">
 
         <ImageView
+            android:layout_margin="20dp"
             android:id="@+id/img_item_photo"
             android:layout_width="match_parent"
             android:layout_height="300dp"
