--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -15,16 +15,16 @@
 
 
         <ImageView
-            android:layout_margin="20dp"
             android:id="@+id/img_item_photo"
             android:layout_width="match_parent"
             android:layout_height="300dp"
             android:layout_gravity="center"
+            android:layout_margin="20dp"
             android:scaleType="centerCrop"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            tools:src="@tools:sample/avatars"
-            tools:ignore="ContentDescription" />
+            app:layout_constraintTop_toBottomOf="@+id/btn_back"
+            tools:ignore="ContentDescription"
+            tools:src="@tools:sample/avatars" />
 
         <ImageButton
             android:id="@+id/btn_back"
@@ -78,6 +78,7 @@
             android:layout_marginEnd="16dp"
             android:textAlignment="center"
             android:textColor="@color/white"
+            android:textStyle="bold"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/tv_item_name_detail"
